@@ -1,34 +1,34 @@
 /*
- * Copyright 1998-2013 University Corporation for Atmospheric Research/Unidata
+ * Copyright 1998-2014 University Corporation for Atmospheric Research/Unidata
  *
- * Portions of this software were developed by the Unidata Program at the
- * University Corporation for Atmospheric Research.
+ *   Portions of this software were developed by the Unidata Program at the
+ *   University Corporation for Atmospheric Research.
  *
- * Access and use of this software shall impose the following obligations
- * and understandings on the user. The user is granted the right, without
- * any fee or cost, to use, copy, modify, alter, enhance and distribute
- * this software, and any derivative works thereof, and its supporting
- * documentation for any purpose whatsoever, provided that this entire
- * notice appears in all copies of the software, derivative works and
- * supporting documentation.  Further, UCAR requests that the user credit
- * UCAR/Unidata in any publications that result from the use of this
- * software or in any product that includes this software. The names UCAR
- * and/or Unidata, however, may not be used in any advertising or publicity
- * to endorse or promote any products or commercial entity unless specific
- * written permission is obtained from UCAR/Unidata. The user also
- * understands that UCAR/Unidata is not obligated to provide the user with
- * any support, consulting, training or assistance of any kind with regard
- * to the use, operation and performance of this software nor to provide
- * the user with any updates, revisions, new versions or "bug fixes."
+ *   Access and use of this software shall impose the following obligations
+ *   and understandings on the user. The user is granted the right, without
+ *   any fee or cost, to use, copy, modify, alter, enhance and distribute
+ *   this software, and any derivative works thereof, and its supporting
+ *   documentation for any purpose whatsoever, provided that this entire
+ *   notice appears in all copies of the software, derivative works and
+ *   supporting documentation.  Further, UCAR requests that the user credit
+ *   UCAR/Unidata in any publications that result from the use of this
+ *   software or in any product that includes this software. The names UCAR
+ *   and/or Unidata, however, may not be used in any advertising or publicity
+ *   to endorse or promote any products or commercial entity unless specific
+ *   written permission is obtained from UCAR/Unidata. The user also
+ *   understands that UCAR/Unidata is not obligated to provide the user with
+ *   any support, consulting, training or assistance of any kind with regard
+ *   to the use, operation and performance of this software nor to provide
+ *   the user with any updates, revisions, new versions or "bug fixes."
  *
- * THIS SOFTWARE IS PROVIDED BY UCAR/UNIDATA "AS IS" AND ANY EXPRESS OR
- * IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
- * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
- * DISCLAIMED. IN NO EVENT SHALL UCAR/UNIDATA BE LIABLE FOR ANY SPECIAL,
- * INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING
- * FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT,
- * NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION
- * WITH THE ACCESS, USE OR PERFORMANCE OF THIS SOFTWARE.
+ *   THIS SOFTWARE IS PROVIDED BY UCAR/UNIDATA "AS IS" AND ANY EXPRESS OR
+ *   IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+ *   WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ *   DISCLAIMED. IN NO EVENT SHALL UCAR/UNIDATA BE LIABLE FOR ANY SPECIAL,
+ *   INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING
+ *   FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT,
+ *   NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION
+ *   WITH THE ACCESS, USE OR PERFORMANCE OF THIS SOFTWARE.
  */
 
 package ucar.nc2.ui;
@@ -36,11 +36,11 @@ package ucar.nc2.ui;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.support.ClassPathXmlApplicationContext;
 import thredds.featurecollection.FeatureCollectionConfig;
-import thredds.inventory.MController;
 import thredds.inventory.bdb.MetadataManager;
 import ucar.nc2.NCdumpW;
 import ucar.nc2.NetcdfFile;
 import ucar.nc2.NetcdfFileWriter;
+import ucar.nc2.Variable;
 import ucar.nc2.constants.FeatureType;
 import ucar.nc2.dataset.CoordSysBuilder;
 import ucar.nc2.dataset.NetcdfDataset;
@@ -150,6 +150,7 @@ public class ToolsUI extends JPanel {
   private GribFilesPanel gribFilesPanel;
   private GribIndexPanel gribIdxPanel;
   private GribRenamePanel gribVariableRenamePanel;
+  private GribRewritePanel gribRewritePanel;
   private GribTemplatePanel gribTemplatePanel;
   private Grib1CollectionPanel grib1CollectionPanel;
   private ReportOpPanel grib1ReportPanel;
@@ -157,6 +158,7 @@ public class ToolsUI extends JPanel {
   private Grib2CollectionPanel grib2CollectionPanel;
   private Grib2TablePanel grib2TablePanel;
   private ReportOpPanel grib2ReportPanel;
+  private Grib1DataPanel grib1DataPanel;
   private Grib2DataPanel grib2DataPanel;
   private Hdf5ObjectPanel hdf5ObjectPanel;
   private Hdf5DataPanel hdf5DataPanel;
@@ -278,7 +280,8 @@ public class ToolsUI extends JPanel {
     gribTabPane.addTab("WMO-COMMON", new JLabel("WMO-COMMON"));
     gribTabPane.addTab("WMO-CODES", new JLabel("WMO-CODES"));
     gribTabPane.addTab("WMO-TEMPLATES", new JLabel("WMO-TEMPLATES"));
-    gribTabPane.addTab("GRIB-RENAME", new JLabel("GRIB-RENAME"));
+    gribTabPane.addTab("GRIB-Rename", new JLabel("GRIB-Rename"));
+    gribTabPane.addTab("GRIB-Rewrite", new JLabel("GRIB-Rewrite"));
     addListeners(gribTabPane);
 
     // nested-2 tab - grib-2
@@ -293,6 +296,7 @@ public class ToolsUI extends JPanel {
     grib1TabPane.addTab("GRIB1collection", new JLabel("GRIB1collection"));
     grib1TabPane.addTab("GRIB-FILES", new JLabel("GRIB-FILES"));
     grib1TabPane.addTab("GRIB1-REPORT", new JLabel("GRIB1-REPORT"));
+    grib1TabPane.addTab("GRIB1data", new JLabel("GRIB1data"));
     grib1TabPane.addTab("GRIB1-TABLES", new JLabel("GRIB1-TABLES"));
     addListeners(grib1TabPane);
 
@@ -376,229 +380,293 @@ public class ToolsUI extends JPanel {
     }
 
     Component c;
-    if (title.equals("Aggregation")) {
-      aggPanel = new AggPanel((PreferencesExt) mainPrefs.node("NcMLAggregation"));
-      c = aggPanel;
+    switch (title) {
+      case "Aggregation":
+        aggPanel = new AggPanel((PreferencesExt) mainPrefs.node("NcMLAggregation"));
+        c = aggPanel;
 
-    } else if (title.equals("BUFR")) {
-      bufrPanel = new BufrPanel((PreferencesExt) mainPrefs.node("bufr"));
-      c = bufrPanel;
+        break;
+      case "BUFR":
+        bufrPanel = new BufrPanel((PreferencesExt) mainPrefs.node("bufr"));
+        c = bufrPanel;
 
-    } else if (title.equals("BUFRTableB")) {
-      bufrTableBPanel = new BufrTableBPanel((PreferencesExt) mainPrefs.node("bufr2"));
-      c = bufrTableBPanel;
+        break;
+      case "BUFRTableB":
+        bufrTableBPanel = new BufrTableBPanel((PreferencesExt) mainPrefs.node("bufr2"));
+        c = bufrTableBPanel;
 
-    } else if (title.equals("BUFRTableD")) {
-      bufrTableDPanel = new BufrTableDPanel((PreferencesExt) mainPrefs.node("bufrD"));
-      c = bufrTableDPanel;
+        break;
+      case "BUFRTableD":
+        bufrTableDPanel = new BufrTableDPanel((PreferencesExt) mainPrefs.node("bufrD"));
+        c = bufrTableDPanel;
 
-    } else if (title.equals("BufrReports")) {
-      PreferencesExt prefs = (PreferencesExt) mainPrefs.node("bufrReports");
-      ReportPanel rp = new ucar.nc2.ui.BufrReportPanel(prefs);
-      bufrReportPanel = new ReportOpPanel(prefs, rp);
-      c = bufrReportPanel;
+        break;
+      case "BufrReports": {
+        PreferencesExt prefs = (PreferencesExt) mainPrefs.node("bufrReports");
+        ReportPanel rp = new BufrReportPanel(prefs);
+        bufrReportPanel = new ReportOpPanel(prefs, rp);
+        c = bufrReportPanel;
 
-    } else if (title.equals("BUFR-CODES")) {
-      bufrCodePanel = new BufrCodePanel((PreferencesExt) mainPrefs.node("bufr-codes"));
-      c = bufrCodePanel;
+        break;
+      }
+      case "BUFR-CODES":
+        bufrCodePanel = new BufrCodePanel((PreferencesExt) mainPrefs.node("bufr-codes"));
+        c = bufrCodePanel;
 
-    } else if (title.equals("CdmrFeature")) {
-      cdmremotePanel = new CdmrFeature((PreferencesExt) mainPrefs.node("CdmrFeature"));
-      c = cdmremotePanel;
+        break;
+      case "CdmrFeature":
+        cdmremotePanel = new CdmrFeature((PreferencesExt) mainPrefs.node("CdmrFeature"));
+        c = cdmremotePanel;
 
-    } else if (title.equals("CollectionSpec")) {
-      fcPanel = new CollectionSpecPanel((PreferencesExt) mainPrefs.node("collSpec"));
-      c = fcPanel;
+        break;
+      case "CollectionSpec":
+        fcPanel = new CollectionSpecPanel((PreferencesExt) mainPrefs.node("collSpec"));
+        c = fcPanel;
 
-    } else if (title.equals("DirectoryPartition")) {
-      dirPartPanel = new DirectoryPartitionPanel((PreferencesExt) mainPrefs.node("dirPartition"));
-      c = dirPartPanel;
+        break;
+      case "DirectoryPartition":
+        dirPartPanel = new DirectoryPartitionPanel((PreferencesExt) mainPrefs.node("dirPartition"));
+        c = dirPartPanel;
 
-    } else if (title.equals("NcStream")) {
-      ncStreamPanel = new NcStreamPanel((PreferencesExt) mainPrefs.node("NcStream"));
-      c = ncStreamPanel;
+        break;
+      case "NcStream":
+        ncStreamPanel = new NcStreamPanel((PreferencesExt) mainPrefs.node("NcStream"));
+        c = ncStreamPanel;
 
-    } else if (title.equals("GRIB1collection")) {
-      grib1CollectionPanel = new Grib1CollectionPanel((PreferencesExt) mainPrefs.node("grib1raw"));
-      c = grib1CollectionPanel;
+        break;
+      case "GRIB1collection":
+        grib1CollectionPanel = new Grib1CollectionPanel((PreferencesExt) mainPrefs.node("grib1raw"));
+        c = grib1CollectionPanel;
 
-    } else if (title.equals("GRIB-FILES")) {
-      gribFilesPanel = new GribFilesPanel((PreferencesExt) mainPrefs.node("gribFiles"));
-      c = gribFilesPanel;
+        break;
+      case "GRIB1data":
+        grib1DataPanel = new Grib1DataPanel((PreferencesExt) mainPrefs.node("grib1Data"));
+        c = grib1DataPanel;
 
-    } else if (title.equals("GRIB2collection")) {
-      grib2CollectionPanel = new Grib2CollectionPanel((PreferencesExt) mainPrefs.node("gribNew"));
-      c = grib2CollectionPanel;
+        break;
+      case "GRIB-FILES":
+        gribFilesPanel = new GribFilesPanel((PreferencesExt) mainPrefs.node("gribFiles"));
+        c = gribFilesPanel;
 
-    } else if (title.equals("GRIB2data")) {
-      grib2DataPanel = new Grib2DataPanel((PreferencesExt) mainPrefs.node("grib2Data"));
-      c = grib2DataPanel;
+        break;
+      case "GRIB2collection":
+        grib2CollectionPanel = new Grib2CollectionPanel((PreferencesExt) mainPrefs.node("gribNew"));
+        c = grib2CollectionPanel;
 
-    } else if (title.equals("BufrCdmIndex")) {
-      bufrCdmIndexPanel = new BufrCdmIndexPanel((PreferencesExt) mainPrefs.node("bufrCdmIdx"));
-      c = bufrCdmIndexPanel;
+        break;
+      case "GRIB2data":
+        grib2DataPanel = new Grib2DataPanel((PreferencesExt) mainPrefs.node("grib2Data"));
+        c = grib2DataPanel;
+
+        break;
+      case "BufrCdmIndex":
+        bufrCdmIndexPanel = new BufrCdmIndexPanel((PreferencesExt) mainPrefs.node("bufrCdmIdx"));
+        c = bufrCdmIndexPanel;
 
     /* } else if (title.equals("CdmIndex")) {
       gribCdmIndexPanel = new GribCdmIndexPanel((PreferencesExt) mainPrefs.node("cdmIdx"));
       c = gribCdmIndexPanel; */
 
-    } else if (title.equals("CdmIndex2")) {
-      cdmIndex2Panel = new CdmIndex2Panel((PreferencesExt) mainPrefs.node("cdmIdx2"));
-      c = cdmIndex2Panel;
+        break;
+      case "CdmIndex2":
+        cdmIndex2Panel = new CdmIndex2Panel((PreferencesExt) mainPrefs.node("cdmIdx2"));
+        c = cdmIndex2Panel;
 
-    } else if (title.equals("CdmIndexReport")) {
-      PreferencesExt prefs = (PreferencesExt) mainPrefs.node("CdmIndexReport");
-      ReportPanel rp = new ucar.nc2.ui.CdmIndexReportPanel(prefs);
-      cdmIndexReportPanel = new ReportOpPanel(prefs, rp);
-      c = cdmIndexReportPanel;
+        break;
+      case "CdmIndexReport": {
+        PreferencesExt prefs = (PreferencesExt) mainPrefs.node("CdmIndexReport");
+        ReportPanel rp = new CdmIndexReportPanel(prefs);
+        cdmIndexReportPanel = new ReportOpPanel(prefs, rp);
+        c = cdmIndexReportPanel;
 
-    } else if (title.equals("GribIndex")) {
-      gribIdxPanel = new GribIndexPanel((PreferencesExt) mainPrefs.node("gribIdx"));
-      c = gribIdxPanel;
+        break;
+      }
+      case "GribIndex":
+        gribIdxPanel = new GribIndexPanel((PreferencesExt) mainPrefs.node("gribIdx"));
+        c = gribIdxPanel;
 
-    } else if (title.equals("GRIB1-REPORT")) {
-      PreferencesExt prefs = (PreferencesExt) mainPrefs.node("grib1Report");
-      ReportPanel rp = new ucar.nc2.ui.Grib1ReportPanel(prefs);
-      grib1ReportPanel = new ReportOpPanel(prefs, rp);
-      c = grib1ReportPanel;
+        break;
+      case "GRIB1-REPORT": {
+        PreferencesExt prefs = (PreferencesExt) mainPrefs.node("grib1Report");
+        ReportPanel rp = new Grib1ReportPanel(prefs);
+        grib1ReportPanel = new ReportOpPanel(prefs, rp);
+        c = grib1ReportPanel;
 
-    } else if (title.equals("GRIB2-REPORT")) {
-      PreferencesExt prefs = (PreferencesExt) mainPrefs.node("gribReport");
-      ReportPanel rp = new ucar.nc2.ui.Grib2ReportPanel(prefs);
-      grib2ReportPanel = new ReportOpPanel(prefs, rp);
-      c = grib2ReportPanel;
+        break;
+      }
+      case "GRIB2-REPORT": {
+        PreferencesExt prefs = (PreferencesExt) mainPrefs.node("gribReport");
+        ReportPanel rp = new Grib2ReportPanel(prefs);
+        grib2ReportPanel = new ReportOpPanel(prefs, rp);
+        c = grib2ReportPanel;
 
-    } else if (title.equals("WMO-COMMON")) {
-      wmoCommonCodePanel = new WmoCCPanel((PreferencesExt) mainPrefs.node("wmo-common"));
-      c = wmoCommonCodePanel;
+        break;
+      }
+      case "WMO-COMMON":
+        wmoCommonCodePanel = new WmoCCPanel((PreferencesExt) mainPrefs.node("wmo-common"));
+        c = wmoCommonCodePanel;
 
-    } else if (title.equals("WMO-CODES")) {
-      gribCodePanel = new GribCodePanel((PreferencesExt) mainPrefs.node("wmo-codes"));
-      c = gribCodePanel;
+        break;
+      case "WMO-CODES":
+        gribCodePanel = new GribCodePanel((PreferencesExt) mainPrefs.node("wmo-codes"));
+        c = gribCodePanel;
 
-    } else if (title.equals("WMO-TEMPLATES")) {
-      gribTemplatePanel = new GribTemplatePanel((PreferencesExt) mainPrefs.node("wmo-templates"));
-      c = gribTemplatePanel;
+        break;
+      case "WMO-TEMPLATES":
+        gribTemplatePanel = new GribTemplatePanel((PreferencesExt) mainPrefs.node("wmo-templates"));
+        c = gribTemplatePanel;
 
-    } else if (title.equals("GRIB1-TABLES")) {
-      grib1TablePanel = new Grib1TablePanel((PreferencesExt) mainPrefs.node("grib1-tables"));
-      c = grib1TablePanel;
+        break;
+      case "GRIB1-TABLES":
+        grib1TablePanel = new Grib1TablePanel((PreferencesExt) mainPrefs.node("grib1-tables"));
+        c = grib1TablePanel;
 
-    } else if (title.equals("GRIB2-TABLES")) {
-      grib2TablePanel = new Grib2TablePanel((PreferencesExt) mainPrefs.node("grib2-tables"));
-      c = grib2TablePanel;
+        break;
+      case "GRIB2-TABLES":
+        grib2TablePanel = new Grib2TablePanel((PreferencesExt) mainPrefs.node("grib2-tables"));
+        c = grib2TablePanel;
 
-    } else if (title.equals("GRIB-RENAME")) {
-      gribVariableRenamePanel = new GribRenamePanel((PreferencesExt) mainPrefs.node("grib-rename"));
-      c = gribVariableRenamePanel;
+        break;
+      case "GRIB-Rename":
+        gribVariableRenamePanel = new GribRenamePanel((PreferencesExt) mainPrefs.node("grib-rename"));
+        c = gribVariableRenamePanel;
 
-    } else if (title.equals("CoordSys")) {
-      coordSysPanel = new CoordSysPanel((PreferencesExt) mainPrefs.node("CoordSys"));
-      c = coordSysPanel;
+        break;
+      case "GRIB-Rewrite":
+        gribRewritePanel = new GribRewritePanel((PreferencesExt) mainPrefs.node("grib-rewrite"));
+        c = gribRewritePanel;
 
-    } else if (title.equals("FeatureScan")) {
-      ftPanel = new FeatureScanPanel((PreferencesExt) mainPrefs.node("ftPanel"));
-      c = ftPanel;
+        break;
+      case "CoordSys":
+        coordSysPanel = new CoordSysPanel((PreferencesExt) mainPrefs.node("CoordSys"));
+        c = coordSysPanel;
 
-    } else if (title.equals("GeoTiff")) {
-      geotiffPanel = new GeotiffPanel((PreferencesExt) mainPrefs.node("WCS"));
-      c = geotiffPanel;
+        break;
+      case "FeatureScan":
+        ftPanel = new FeatureScanPanel((PreferencesExt) mainPrefs.node("ftPanel"));
+        c = ftPanel;
 
-    } else if (title.equals("Grids")) {
-      gridPanel = new GeoGridPanel((PreferencesExt) mainPrefs.node("grid"));
-      c = gridPanel;
+        break;
+      case "GeoTiff":
+        geotiffPanel = new GeotiffPanel((PreferencesExt) mainPrefs.node("WCS"));
+        c = geotiffPanel;
 
-    } else if (title.equals("Coverages")) {
-      coveragePanel = new CoveragePanel((PreferencesExt) mainPrefs.node("coverage"));
-      c = coveragePanel;
+        break;
+      case "Grids":
+        gridPanel = new GeoGridPanel((PreferencesExt) mainPrefs.node("grid"));
+        c = gridPanel;
 
-    } else if (title.equals("HDF5-Objects")) {
-      hdf5ObjectPanel = new Hdf5ObjectPanel((PreferencesExt) mainPrefs.node("hdf5"));
-      c = hdf5ObjectPanel;
+        break;
+      case "Coverages":
+        coveragePanel = new CoveragePanel((PreferencesExt) mainPrefs.node("coverage"));
+        c = coveragePanel;
 
-    } else if (title.equals("HDF5-Data")) {
-      hdf5DataPanel = new Hdf5DataPanel((PreferencesExt) mainPrefs.node("hdf5data"));
-      c = hdf5DataPanel;
+        break;
+      case "HDF5-Objects":
+        hdf5ObjectPanel = new Hdf5ObjectPanel((PreferencesExt) mainPrefs.node("hdf5"));
+        c = hdf5ObjectPanel;
 
-    } else if (title.equals("Netcdf4-JNI")) {
-      nc4viewer = new DatasetViewerPanel((PreferencesExt) mainPrefs.node("nc4viewer"), true);
-      c = nc4viewer;
+        break;
+      case "HDF5-Data":
+        hdf5DataPanel = new Hdf5DataPanel((PreferencesExt) mainPrefs.node("hdf5data"));
+        c = hdf5DataPanel;
 
-    } else if (title.equals("HDF4")) {
-      hdf4Panel = new Hdf4Panel((PreferencesExt) mainPrefs.node("hdf4"));
-      c = hdf4Panel;
+        break;
+      case "Netcdf4-JNI":
+        nc4viewer = new DatasetViewerPanel((PreferencesExt) mainPrefs.node("nc4viewer"), true);
+        c = nc4viewer;
 
-    } else if (title.equals("Images")) {
-      imagePanel = new ImagePanel((PreferencesExt) mainPrefs.node("images"));
-      c = imagePanel;
+        break;
+      case "HDF4":
+        hdf4Panel = new Hdf4Panel((PreferencesExt) mainPrefs.node("hdf4"));
+        c = hdf4Panel;
 
-    } else if (title.equals("Fmrc")) {
-      fmrcPanel = new FmrcPanel((PreferencesExt) mainPrefs.node("fmrc2"));
-      c = fmrcPanel;
+        break;
+      case "Images":
+        imagePanel = new ImagePanel((PreferencesExt) mainPrefs.node("images"));
+        c = imagePanel;
 
-    } else if (title.equals("Collections")) {
-      fmrcCollectionPanel = new FmrcCollectionPanel((PreferencesExt) mainPrefs.node("collections"));
-      c = fmrcCollectionPanel;
+        break;
+      case "Fmrc":
+        fmrcPanel = new FmrcPanel((PreferencesExt) mainPrefs.node("fmrc2"));
+        c = fmrcPanel;
 
-    } else if (title.equals("NCDump")) {
-      ncdumpPanel = new NCdumpPanel((PreferencesExt) mainPrefs.node("NCDump"));
-      c = ncdumpPanel;
+        break;
+      case "Collections":
+        fmrcCollectionPanel = new FmrcCollectionPanel((PreferencesExt) mainPrefs.node("collections"));
+        c = fmrcCollectionPanel;
 
-    } else if (title.equals("NcmlEditor")) {
-      ncmlEditorPanel = new NcmlEditorPanel((PreferencesExt) mainPrefs.node("NcmlEditor"));
-      c = ncmlEditorPanel;
+        break;
+      case "NCDump":
+        ncdumpPanel = new NCdumpPanel((PreferencesExt) mainPrefs.node("NCDump"));
+        c = ncdumpPanel;
 
-    } else if (title.equals("PointFeature")) {
-      pointFeaturePanel = new PointFeaturePanel((PreferencesExt) mainPrefs.node("pointFeature"));
-      c = pointFeaturePanel;
+        break;
+      case "NcmlEditor":
+        ncmlEditorPanel = new NcmlEditorPanel((PreferencesExt) mainPrefs.node("NcmlEditor"));
+        c = ncmlEditorPanel;
 
-    } else if (title.equals("Radial")) {
-      radialPanel = new RadialPanel((PreferencesExt) mainPrefs.node("radial"));
-      c = radialPanel;
+        break;
+      case "PointFeature":
+        pointFeaturePanel = new PointFeaturePanel((PreferencesExt) mainPrefs.node("pointFeature"));
+        c = pointFeaturePanel;
 
-    } else if (title.equals("StationRadial")) {
-      stationRadialPanel = new StationRadialPanel((PreferencesExt) mainPrefs.node("stationRadar"));
-      c = stationRadialPanel;
+        break;
+      case "Radial":
+        radialPanel = new RadialPanel((PreferencesExt) mainPrefs.node("radial"));
+        c = radialPanel;
 
-    } else if (title.equals("THREDDS")) {
-      threddsUI = new ThreddsUI(ToolsUI.this.parentFrame, (PreferencesExt) mainPrefs.node("thredds"));
-      threddsUI.addPropertyChangeListener(new java.beans.PropertyChangeListener() {
-        public void propertyChange(java.beans.PropertyChangeEvent e) {
-          if (e.getPropertyName().equals("InvAccess")) {
-            thredds.catalog.InvAccess access = (thredds.catalog.InvAccess) e.getNewValue();
-            jumptoThreddsDatatype(access);
+        break;
+      case "StationRadial":
+        stationRadialPanel = new StationRadialPanel((PreferencesExt) mainPrefs.node("stationRadar"));
+        c = stationRadialPanel;
+
+        break;
+      case "THREDDS":
+        threddsUI = new ThreddsUI(ToolsUI.this.parentFrame, (PreferencesExt) mainPrefs.node("thredds"));
+        threddsUI.addPropertyChangeListener(new PropertyChangeListener() {
+          public void propertyChange(PropertyChangeEvent e) {
+            if (e.getPropertyName().equals("InvAccess")) {
+              thredds.catalog.InvAccess access = (thredds.catalog.InvAccess) e.getNewValue();
+              jumptoThreddsDatatype(access);
+            }
+            if (e.getPropertyName().equals("Dataset") || e.getPropertyName().equals("CoordSys") || e.getPropertyName().equals("File")) {
+              thredds.catalog.InvDataset ds = (thredds.catalog.InvDataset) e.getNewValue();
+              setThreddsDatatype(ds, e.getPropertyName());
+            }
           }
-          if (e.getPropertyName().equals("Dataset") || e.getPropertyName().equals("CoordSys") || e.getPropertyName().equals("File")) {
-            thredds.catalog.InvDataset ds = (thredds.catalog.InvDataset) e.getNewValue();
-            setThreddsDatatype(ds, e.getPropertyName());
-          }
-        }
-      });
+        });
 
-      c = threddsUI;
+        c = threddsUI;
 
-    } else if (title.equals("Units")) {
-      unitsPanel = new UnitsPanel((PreferencesExt) mainPrefs.node("units"));
-      c = unitsPanel;
+        break;
+      case "Units":
+        unitsPanel = new UnitsPanel((PreferencesExt) mainPrefs.node("units"));
+        c = unitsPanel;
 
-    } else if (title.equals("URLdump")) {
-      urlPanel = new URLDumpPane((PreferencesExt) mainPrefs.node("urlDump"));
-      c = urlPanel;
+        break;
+      case "URLdump":
+        urlPanel = new URLDumpPane((PreferencesExt) mainPrefs.node("urlDump"));
+        c = urlPanel;
 
-    } else if (title.equals("Viewer")) {
-      c = viewerPanel;
+        break;
+      case "Viewer":
+        c = viewerPanel;
 
-    } else if (title.equals("Writer")) {
-      writerPanel = new DatasetWriterPanel((PreferencesExt) mainPrefs.node("writer"));
-      c = writerPanel;
+        break;
+      case "Writer":
+        writerPanel = new DatasetWriterPanel((PreferencesExt) mainPrefs.node("writer"));
+        c = writerPanel;
 
-    } else if (title.equals("WMS")) {
-      wmsPanel = new WmsPanel((PreferencesExt) mainPrefs.node("wms"));
-      c = wmsPanel;
+        break;
+      case "WMS":
+        wmsPanel = new WmsPanel((PreferencesExt) mainPrefs.node("wms"));
+        c = wmsPanel;
 
-    } else {
-      System.out.println("tabbedPane unknown component " + title);
-      return;
+        break;
+      default:
+        System.out.println("tabbedPane unknown component " + title);
+        return;
     }
 
     parent.setComponentAt(idx, c);
@@ -856,8 +924,7 @@ public class ToolsUI extends JPanel {
      /////////////////////////////////////
     a = new AbstractAction() {
       public void actionPerformed(ActionEvent e) {
-        Boolean state = (Boolean) getValue(BAMutil.STATE);
-        setUseRecordStructure = state;
+        setUseRecordStructure = (Boolean) getValue(BAMutil.STATE);
       }
     };
     BAMutil.setActionPropertiesToggle(a, null, "nc3UseRecords", setUseRecordStructure, 'V', -1);
@@ -1000,6 +1067,7 @@ public class ToolsUI extends JPanel {
     if (grib2CollectionPanel != null) grib2CollectionPanel.save();
     // if (grib2RectilyzePanel != null) grib2RectilyzePanel.save();
     if (grib2DataPanel != null) grib2DataPanel.save();
+    if (grib1DataPanel != null) grib1DataPanel.save();
     if (gribCodePanel != null) gribCodePanel.save();
     if (gribIdxPanel != null) gribIdxPanel.save();
     if (gribTemplatePanel != null) gribTemplatePanel.save();
@@ -1009,6 +1077,7 @@ public class ToolsUI extends JPanel {
     if (grib1TablePanel != null) grib1TablePanel.save();
     if (grib2TablePanel != null) grib2TablePanel.save();
     if (gribVariableRenamePanel != null) gribVariableRenamePanel.save();
+    if (gribRewritePanel != null) gribRewritePanel.save();
     if (gridPanel != null) gridPanel.save();
     if (hdf5ObjectPanel != null) hdf5ObjectPanel.save();
     if (hdf5DataPanel != null) hdf5DataPanel.save();
@@ -1073,6 +1142,14 @@ public class ToolsUI extends JPanel {
     ftTabPane.setSelectedComponent(pointFeaturePanel);
   }
 
+  private void openGrib1Collection(String collection) {
+    makeComponent(grib1TabPane, "GRIB1collection");  // LOOK - does this aleays make component ?
+    grib1CollectionPanel.setCollection(collection);
+    tabbedPane.setSelectedComponent(iospTabPane);
+    iospTabPane.setSelectedComponent(grib1TabPane);
+    grib1TabPane.setSelectedComponent(grib1CollectionPanel);
+  }
+
   private void openGrib2Collection(String collection) {
     makeComponent(grib2TabPane, "GRIB2collection");
     grib2CollectionPanel.setCollection(collection);
@@ -1081,12 +1158,20 @@ public class ToolsUI extends JPanel {
     grib2TabPane.setSelectedComponent(grib2CollectionPanel);
   }
 
-  private void openGrib1Raw(String filename) {
-    makeComponent(grib1TabPane, "GRIB-RAW");
-    grib1CollectionPanel.process(filename);
+  private void openGrib2Data(String datasetName) {
+    makeComponent(grib2TabPane, "GRIB2data");
+    grib2DataPanel.doit(datasetName);
+    tabbedPane.setSelectedComponent(iospTabPane);
+    iospTabPane.setSelectedComponent(grib2TabPane);
+    grib2TabPane.setSelectedComponent(grib2DataPanel);
+  }
+
+  private void openGrib1Data(String datasetName) {
+    makeComponent(grib1TabPane, "GRIB1data");
+    grib1DataPanel.doit(datasetName);
     tabbedPane.setSelectedComponent(iospTabPane);
     iospTabPane.setSelectedComponent(grib1TabPane);
-    grib1TabPane.setSelectedComponent(grib1CollectionPanel);
+    grib1TabPane.setSelectedComponent(grib1DataPanel);
   }
 
   private void openGridDataset(String datasetName) {
@@ -1295,10 +1380,6 @@ public class ToolsUI extends JPanel {
       if (!(ioe instanceof FileNotFoundException))
         ioe.printStackTrace();
 
-      try {
-        if (ncfile != null) ncfile.close();
-      } catch (IOException ee) {
-      }
       ncfile = null;
 
     } catch (Exception e) {
@@ -1309,6 +1390,7 @@ public class ToolsUI extends JPanel {
       try {
         if (ncfile != null) ncfile.close();
       } catch (IOException ee) {
+        System.out.printf("close failed%n");
       }
       ncfile = null;
     }
@@ -1331,25 +1413,15 @@ public class ToolsUI extends JPanel {
     GetDataRunnable runner = new GetDataRunnable() {
       public void run(Object o) {
         String[] values = (String[]) o;
-        BufferedOutputStream out = null;
-        try {
-          FileOutputStream fos = new FileOutputStream(values[0]);
-          out = new BufferedOutputStream(fos, 60000);
-        } catch (IOException ioe) {
-          downloadStatus = "Error opening" + values[0] + "\n" + ioe.getMessage();
-          return;
-        }
+        BufferedOutputStream out;
 
-        try {
+        try ( FileOutputStream fos = new FileOutputStream(values[0])) {
+          out = new BufferedOutputStream(fos, 60000);
           IO.copyUrlB(values[1], out, 60000);
           downloadStatus = values[1] + " written to " + values[0];
+
         } catch (IOException ioe) {
-          downloadStatus = "Error reading " + values[1] + "\n" + ioe.getMessage();
-        } finally {
-          try {
-            out.close();
-          } catch (IOException e) {
-          }
+          downloadStatus = "Error opening " + values[0] + " and reading " + values[1] + "\n" + ioe.getMessage();
         }
       }
     };
@@ -1438,8 +1510,7 @@ public class ToolsUI extends JPanel {
       if (addCoordButton) {
         AbstractAction coordAction = new AbstractAction() {
           public void actionPerformed(ActionEvent e) {
-            Boolean state = (Boolean) getValue(BAMutil.STATE);
-            addCoords = state.booleanValue();
+            addCoords = (Boolean) getValue(BAMutil.STATE);
             String tooltip = addCoords ? "add Coordinates is ON" : "add Coordinates is OFF";
             coordButt.setToolTipText(tooltip);
             //doit( cb.getSelectedItem()); // called from cb action listener
@@ -1448,7 +1519,7 @@ public class ToolsUI extends JPanel {
         addCoords = prefs.getBoolean("coordState", false);
         String tooltip2 = addCoords ? "add Coordinates is ON" : "add Coordinates is OFF";
         BAMutil.setActionProperties(coordAction, "addCoords", tooltip2, true, 'C', -1);
-        coordAction.putValue(BAMutil.STATE, new Boolean(addCoords));
+        coordAction.putValue(BAMutil.STATE, Boolean.valueOf(addCoords));
         coordButt = BAMutil.addActionToContainer(buttPanel, coordAction);
       }
 
@@ -1593,6 +1664,7 @@ public class ToolsUI extends JPanel {
           if (ncfile != null) ncfile.close();
           ncfile = null;
         } catch (IOException ioe) {
+          System.out.printf("Error closing %n");
         }
       }
     }
@@ -1648,7 +1720,6 @@ public class ToolsUI extends JPanel {
 
 
   private class UnitDatasetCheck extends OpPanel {
-    NetcdfFile ncfile = null;
     TextHistoryPane ta;
 
     UnitDatasetCheck(PreferencesExt p) {
@@ -1661,13 +1732,11 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      try {
-        ncfile = NetcdfDataset.openDataset(command, addCoords, null);
+      try (NetcdfFile ncfile = NetcdfDataset.openDataset(command, addCoords, null)) {
 
         ta.setText("Variables for " + command + ":");
-        Iterator iter = ncfile.getVariables().iterator();
-        while (iter.hasNext()) {
-          VariableEnhanced vs = (VariableEnhanced) iter.next();
+        for (Variable o1 : ncfile.getVariables()) {
+          VariableEnhanced vs = (VariableEnhanced) o1;
           String units = vs.getUnitsString();
           StringBuilder sb = new StringBuilder();
           sb.append("   ").append(vs.getShortName()).append(" has unit= <").append(units).append(">");
@@ -1694,20 +1763,13 @@ public class ToolsUI extends JPanel {
       } catch (IOException ioe) {
         ioe.printStackTrace();
         err = true;
-      } finally {
-        try {
-          if (ncfile != null) ncfile.close();
-          ncfile = null;
-        } catch (IOException ioe) {
-        }
       }
 
       return !err;
     }
 
     void closeOpenFiles() throws IOException {
-      if (ncfile != null) ncfile.close();
-      ncfile = null;
+      ta.clear();
     }
 
   }
@@ -1762,9 +1824,9 @@ public class ToolsUI extends JPanel {
       } catch (Exception e) {
 
         if (Debug.isSet("Xdeveloper")) {
-          ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-          e.printStackTrace(new PrintStream(bos));
-          ta.setText(bos.toString());
+          StringWriter sw = new StringWriter(10000);
+          e.printStackTrace(new PrintWriter(sw));
+          ta.setText(sw.toString());
         } else {
           ta.setText(e.getClass().getName() + ":" + e.getMessage() + "\n" + command);
         }
@@ -1778,7 +1840,7 @@ public class ToolsUI extends JPanel {
     void compare(Object o) {
       String command = (String) o;
       StringTokenizer stoke = new StringTokenizer(command);
-      List<String> list = new ArrayList<String>();
+      List<String> list = new ArrayList<>();
       while (stoke.hasMoreTokens())
         list.add(stoke.nextToken());
 
@@ -1793,9 +1855,9 @@ public class ToolsUI extends JPanel {
       } catch (Exception e) {
 
         if (Debug.isSet("Xdeveloper")) {
-          ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-          e.printStackTrace(new PrintStream(bos));
-          ta.setText(bos.toString());
+           StringWriter sw = new StringWriter(10000);
+           e.printStackTrace(new PrintWriter(sw));
+           ta.setText(sw.toString());
         } else {
           ta.setText(e.getClass().getName() + ":" + e.getMessage() + "\n" + command);
         }
@@ -1830,7 +1892,7 @@ public class ToolsUI extends JPanel {
         try {
           SimpleUnit su = SimpleUnit.factory(command);
           boolean isTime = su instanceof TimeUnit;
-          ta.setText("<" + command + "> isDateUnit= " + isDate + " isTimeUnit= " + isTime);
+          ta.setText("<" + command + "> isTimeUnit= " + isTime);
           if (isTime) {
             TimeUnit du = (TimeUnit) su;
             ta.appendLine("\nTimeUnit = " + du);
@@ -1838,9 +1900,9 @@ public class ToolsUI extends JPanel {
 
         } catch (Exception e) {
           if (Debug.isSet("Xdeveloper")) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-            e.printStackTrace(new PrintStream(bos));
-            ta.setText(bos.toString());
+           StringWriter sw = new StringWriter(10000);
+           e.printStackTrace(new PrintWriter(sw));
+           ta.setText(sw.toString());
           } else {
             ta.setText(e.getClass().getName() + ":" + e.getMessage() + "\n" + command);
           }
@@ -1865,10 +1927,9 @@ public class ToolsUI extends JPanel {
         String valString = command.substring(0, pos).trim();
         String unitString = command.substring(pos+1).trim();  */
 
-        String unitString = command;
-        ta.appendLine("\nParse CalendarDateUnit: <" + unitString + ">\n");
+        ta.appendLine("\nParse CalendarDateUnit: <" + command + ">\n");
 
-        CalendarDateUnit cdu = CalendarDateUnit.of(null, unitString);
+        CalendarDateUnit cdu = CalendarDateUnit.of(null, command);
         ta.appendLine("CalendarDateUnit = " + cdu);
         ta.appendLine(" Calendar        = " + cdu.getCalendar());
         ta.appendLine(" PeriodField     = " + cdu.getTimeUnit().getField());
@@ -1940,9 +2001,9 @@ public class ToolsUI extends JPanel {
         ta.setText("got date= " + coordValue);
 
       } catch (Exception e) {
-        ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-        e.printStackTrace(new PrintStream(bos));
-        ta.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        ta.setText(sw.toString());
       }
     }
   }
@@ -1968,24 +2029,16 @@ public class ToolsUI extends JPanel {
       infoButton.addActionListener(new ActionListener() {
         public void actionPerformed(ActionEvent e) {
           if (ds != null) {
-            NetcdfDatasetInfo info = null;
-            try {
-              info = new NetcdfDatasetInfo(ds);
+            try (NetcdfDatasetInfo info = new NetcdfDatasetInfo( ds)) {
               detailTA.setText(info.writeXML());
               detailTA.appendLine("----------------------");
               detailTA.appendLine(info.getParseInfo());
               detailTA.gotoTop();
 
             } catch (IOException e1) {
-              ByteArrayOutputStream out = new ByteArrayOutputStream();
-              e1.printStackTrace(new PrintStream(out));
-              detailTA.setText(out.toString());
-
-            } finally {
-              if (info != null) try {
-                info.close();
-              } catch (IOException ee) {
-              } // do nothing
+              StringWriter sw = new StringWriter(5000);
+              e1.printStackTrace(new PrintWriter(sw));
+              detailTA.setText(sw.toString());
             }
             detailWindow.show();
           }
@@ -1997,9 +2050,9 @@ public class ToolsUI extends JPanel {
       dsButton.addActionListener(new ActionListener() {
         public void actionPerformed(ActionEvent e) {
           if (ds != null) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-            NetcdfDataset.debugDump(new PrintStream(bos), ds);
-            detailTA.setText(bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            NetcdfDataset.debugDump(new PrintWriter(sw), ds);
+            detailTA.setText(sw.toString());
             detailTA.gotoTop();
             detailWindow.show();
           }
@@ -2016,10 +2069,10 @@ public class ToolsUI extends JPanel {
       try {
         if (ds != null) ds.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
 
       Object spiObject = null;
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         ds = NetcdfDataset.openDataset(command, true, -1, null, spiObject);
         if (ds == null) {
@@ -2033,8 +2086,9 @@ public class ToolsUI extends JPanel {
         err = true;
 
       } catch (Exception e) {
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -2047,6 +2101,7 @@ public class ToolsUI extends JPanel {
         if (ds != null) ds.close();
         ds = null;
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
       ds = ncd;
 
@@ -2130,9 +2185,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Throwable e) {
         e.printStackTrace();
-        ByteArrayOutputStream bos = new ByteArrayOutputStream(5000);
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailTA.gotoTop();
         detailWindow.show();
         err = true;
@@ -2169,7 +2224,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         if (raf != null)
           raf.close();
@@ -2183,8 +2237,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -2208,8 +2263,8 @@ public class ToolsUI extends JPanel {
 
   private class BufrTableBPanel extends OpPanel {
     BufrTableBViewer bufrTable;
-    JComboBox modes;
-    JComboBox tables;
+    JComboBox<BufrTables.Format> modes;
+    JComboBox<BufrTables.TableConfig> tables;
 
     BufrTableBPanel(PreferencesExt p) {
       super(p, "tableB:", false, false);
@@ -2225,7 +2280,7 @@ public class ToolsUI extends JPanel {
       BAMutil.setActionProperties(fileAction, "FileChooser", "open Local table...", false, 'L', -1);
       BAMutil.addActionToContainer(buttPanel, fileAction);
 
-      modes = new JComboBox(BufrTables.Format.values());
+      modes = new JComboBox<>(BufrTables.Format.values());
       buttPanel.add(modes);
 
       JButton accept = new JButton("Accept");
@@ -2236,7 +2291,7 @@ public class ToolsUI extends JPanel {
         }
       });
 
-      tables = new JComboBox(BufrTables.getTables().toArray());
+      tables = new JComboBox<>(BufrTables.getTableConfigsAsArray());
       buttPanel.add(tables);
       tables.addActionListener(new ActionListener() {
         public void actionPerformed(ActionEvent e) {
@@ -2258,7 +2313,6 @@ public class ToolsUI extends JPanel {
     void accept() {
       String command = (String) cb.getSelectedItem();
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         Object format = modes.getSelectedItem();
         bufrTable.setBufrTableB(command, (BufrTables.Format) format);
@@ -2270,8 +2324,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailTA.setVisible(true);
       }
 
@@ -2279,7 +2334,6 @@ public class ToolsUI extends JPanel {
 
     void acceptTable(BufrTables.TableConfig tc) {
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         bufrTable.setBufrTableB(tc.getTableBname(), tc.getTableBformat());
 
@@ -2290,8 +2344,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailTA.setVisible(true);
       }
 
@@ -2307,8 +2362,8 @@ public class ToolsUI extends JPanel {
   /////////////////////////////////////////////////////////////////////
   private class BufrTableDPanel extends OpPanel {
     BufrTableDViewer bufrTable;
-    JComboBox modes;
-    JComboBox tables;
+    JComboBox<BufrTables.Format> modes;
+    JComboBox<BufrTables.TableConfig> tables;
 
     BufrTableDPanel(PreferencesExt p) {
       super(p, "tableD:", false, false);
@@ -2324,7 +2379,7 @@ public class ToolsUI extends JPanel {
       BAMutil.setActionProperties(fileAction, "FileChooser", "open Local table...", false, 'L', -1);
       BAMutil.addActionToContainer(buttPanel, fileAction);
 
-      modes = new JComboBox(BufrTables.Format.values());
+      modes = new JComboBox<>(BufrTables.Format.values());
       buttPanel.add(modes);
 
       JButton accept = new JButton("Accept");
@@ -2335,7 +2390,7 @@ public class ToolsUI extends JPanel {
         }
       });
 
-      tables = new JComboBox(BufrTables.getTables().toArray());
+      tables = new JComboBox<>(BufrTables.getTableConfigsAsArray());
       buttPanel.add(tables);
       tables.addActionListener(new ActionListener() {
         public void actionPerformed(ActionEvent e) {
@@ -2358,9 +2413,7 @@ public class ToolsUI extends JPanel {
     void accept() {
       String command = (String) cb.getSelectedItem();
       if (command == null) return;
-      boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         Object mode = modes.getSelectedItem();
         bufrTable.setBufrTableD(command, (BufrTables.Format) mode);
@@ -2369,21 +2422,19 @@ public class ToolsUI extends JPanel {
         JOptionPane.showMessageDialog(null, "BufrTableViewer cant open " + command + "\n" + ioe.getMessage());
         detailTA.setText("Failed to open <" + command + ">\n" + ioe.getMessage());
         detailTA.setVisible(true);
-        err = true;
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailTA.setVisible(true);
-        err = true;
       }
 
     }
 
     void acceptTable(BufrTables.TableConfig tc) {
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         bufrTable.setBufrTableD(tc.getTableDname(), tc.getTableDformat());
 
@@ -2394,8 +2445,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailTA.setVisible(true);
       }
 
@@ -2489,9 +2541,9 @@ public class ToolsUI extends JPanel {
       add(gribTable, BorderLayout.CENTER);
       gribTable.addPropertyChangeListener(new java.beans.PropertyChangeListener() {
         public void propertyChange(java.beans.PropertyChangeEvent e) {
-          if (e.getPropertyName().equals("openGrib1Raw")) {
+          if (e.getPropertyName().equals("openGrib1Collection")) {
             String filename = (String) e.getNewValue();
-            openGrib1Raw(filename);
+            openGrib1Collection(filename);
           }
         }
       });
@@ -2513,7 +2565,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         gribTable.setCollection(command);
 
@@ -2523,8 +2574,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -2540,7 +2592,7 @@ public class ToolsUI extends JPanel {
   }
 
   /////////////////////////////////////////////////////////////////////
-  // GRIB2 new
+  // GRIB2
   private class Grib2CollectionPanel extends OpPanel {
     ucar.nc2.ui.Grib2CollectionPanel gribTable;
 
@@ -2598,54 +2650,6 @@ public class ToolsUI extends JPanel {
       });
       buttPanel.add(gdsButton);
 
-      /* AbstractButton aggButton = BAMutil.makeButtcon("V3", "Run Rectilyser", false);
-      aggButton.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
-          Formatter f = new Formatter();
-          try {
-            gribTable.runAggregator(f);
-          } catch (IOException e1) {
-            e1.printStackTrace();
-          }
-          detailTA.setText(f.toString());
-          detailTA.gotoTop();
-          detailWindow.show();
-        }
-      });
-      buttPanel.add(aggButton);
-
-      AbstractButton agg2Button = BAMutil.makeButtcon("V3", "Run Rectilyser2", false);
-      agg2Button.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
-          Formatter f = new Formatter();
-          try {
-            gribTable.runAggregator2(f);
-          } catch (IOException e1) {
-            e1.printStackTrace();
-          }
-          detailTA.setText(f.toString());
-          detailTA.gotoTop();
-          detailWindow.show();
-        }
-      });
-      buttPanel.add(agg2Button);  */
-
-      /* AbstractButton collateButton = BAMutil.makeButtcon("V3", "Run GribCollection", false);
-      collateButton.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
-          Formatter f = new Formatter();
-          try {
-            gribTable.runCollate(f);
-          } catch (IOException e1) {
-            e1.printStackTrace();
-          }
-          detailTA.setText(f.toString());
-          detailTA.gotoTop();
-          detailWindow.show();
-        }
-      });
-      buttPanel.add(collateButton); */
-
       AbstractButton writeButton = BAMutil.makeButtcon("netcdf", "Write index", false);
       writeButton.addActionListener(new ActionListener() {
         public void actionPerformed(ActionEvent e) {
@@ -2673,7 +2677,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         gribTable.setCollection(command);
 
@@ -2683,8 +2686,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -2700,6 +2704,7 @@ public class ToolsUI extends JPanel {
   }
 
   /////////////////////////////////////////////////////////////////////
+
   /////////////////////////////////////////////////////////////////////
   /* private class Grib2RectilyzePanel extends OpPanel {
     ucar.nc2.ui.Grib2RectilyzePanel gribTable;
@@ -2845,22 +2850,6 @@ public class ToolsUI extends JPanel {
         }
       });
       buttPanel.add(infoButton);
-
-      /* AbstractButton writeButton = BAMutil.makeButtcon("netcdf", "Write index", false);
-      writeButton.addActionListener(new ActionListener() {
-        public void actionPerformed(ActionEvent e) {
-          Formatter f = new Formatter();
-          try {
-            if (!gribTable.writeIndex(f)) return;
-          } catch (IOException e1) {
-            e1.printStackTrace();
-          }
-          detailTA.setText(f.toString());
-          detailTA.gotoTop();
-          detailWindow.show();
-        }
-      });
-      buttPanel.add(writeButton); */
     }
 
     void setCollection(String collection) {
@@ -2873,7 +2862,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         gribTable.setCollection(command);
 
@@ -2883,8 +2871,79 @@ public class ToolsUI extends JPanel {
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
+        detailWindow.show();
+        err = true;
+      }
+
+      return !err;
+    }
+
+    void save() {
+      gribTable.save();
+      super.save();
+    }
+
+  }
+
+    /////////////////////////////////////////////////////////////////////
+  private class Grib1DataPanel extends OpPanel {
+    ucar.nc2.ui.Grib1DataTable gribTable;
+
+    void closeOpenFiles() throws IOException {
+    }
+
+      Grib1DataPanel(PreferencesExt p) {
+      super(p, "collection:", true, false);
+      gribTable = new ucar.nc2.ui.Grib1DataTable(prefs);
+      add(gribTable, BorderLayout.CENTER);
+
+      gribTable.addPropertyChangeListener(new java.beans.PropertyChangeListener() {
+        public void propertyChange(java.beans.PropertyChangeEvent e) {
+          if (e.getPropertyName().equals("openGrib1Collection")) {
+            String collectionName = (String) e.getNewValue();
+            openGrib1Collection(collectionName);
+          }
+        }
+      });
+
+      AbstractButton infoButton = BAMutil.makeButtcon("Information", "Check Problems", false);
+      infoButton.addActionListener(new ActionListener() {
+        public void actionPerformed(ActionEvent e) {
+          Formatter f = new Formatter();
+          gribTable.checkProblems(f);
+          detailTA.setText(f.toString());
+          detailTA.gotoTop();
+          detailWindow.show();
+        }
+      });
+      buttPanel.add(infoButton);
+    }
+
+    void setCollection(String collection) {
+      if (process(collection)) {
+        if (!defer) cb.addItem(collection);
+      }
+    }
+
+    boolean process(Object o) {
+      String command = (String) o;
+      boolean err = false;
+
+      try {
+        gribTable.setCollection(command);
+
+      } catch (FileNotFoundException ioe) {
+        JOptionPane.showMessageDialog(null, "NetcdfDataset cant open " + command + "\n" + ioe.getMessage());
+        err = true;
+
+      } catch (Exception e) {
+        e.printStackTrace();
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -2917,7 +2976,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         table.setIndexFile(command);
 
@@ -2927,8 +2985,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -3024,7 +3083,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         indexPanel.setIndexFile(Paths.get(command), new FeatureCollectionConfig());
 
@@ -3034,8 +3092,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Throwable e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -3068,7 +3127,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         gribTable.setIndexFile(command);
 
@@ -3078,8 +3136,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -3135,22 +3194,18 @@ public class ToolsUI extends JPanel {
         }
       });
       buttPanel.add(writeButton);
+    }
 
-      gribTable.addPropertyChangeListener(new java.beans.PropertyChangeListener() {
-        public void propertyChange(java.beans.PropertyChangeEvent e) {
-          if (e.getPropertyName().equals("openGrib1n")) {
-            String collectionName = (String) e.getNewValue();
-            openGrib1Raw(collectionName);
-          }
-        }
-      });
+    void setCollection(String collection) {
+      if (process(collection)) {
+        if (!defer) cb.addItem(collection);
+      }
     }
 
     boolean process(Object o) {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         gribTable.setCollection(command);
 
@@ -3160,8 +3215,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Exception e) {
         e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -3197,7 +3253,7 @@ public class ToolsUI extends JPanel {
       AbstractAction useIndexButt = new AbstractAction() {
         public void actionPerformed(ActionEvent e) {
           Boolean state = (Boolean) getValue(BAMutil.STATE);
-          useIndex = state.booleanValue();
+          useIndex = state;
         }
       };
       useIndexButt.putValue(BAMutil.STATE, useIndex);
@@ -3207,7 +3263,7 @@ public class ToolsUI extends JPanel {
       AbstractAction eachFileButt = new AbstractAction() {
         public void actionPerformed(ActionEvent e) {
           Boolean state = (Boolean) getValue(BAMutil.STATE);
-          eachFile = state.booleanValue();
+          eachFile = state;
         }
       };
       eachFileButt.putValue(BAMutil.STATE, eachFile);
@@ -3217,7 +3273,7 @@ public class ToolsUI extends JPanel {
       AbstractAction extraButt = new AbstractAction() {
         public void actionPerformed(ActionEvent e) {
           Boolean state = (Boolean) getValue(BAMutil.STATE);
-          extra = state.booleanValue();
+          extra = state;
         }
       };
       extraButt.putValue(BAMutil.STATE, extra);
@@ -3244,7 +3300,6 @@ public class ToolsUI extends JPanel {
       boolean err = false;
       String command = (String) cb.getSelectedItem();
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         reportPanel.doReport(command, useIndex, eachFile, extra, reports.getSelectedItem());
 
@@ -3254,8 +3309,9 @@ public class ToolsUI extends JPanel {
         err = true;
 
       } catch (Exception e) {
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -3438,7 +3494,7 @@ public class ToolsUI extends JPanel {
     GribTemplatePanel(PreferencesExt p) {
       super(p, "table:", false, false, false);
 
-      final JComboBox modes = new JComboBox(WmoTemplateTable.Version.values());
+      final JComboBox<WmoTemplateTable.Version> modes = new JComboBox<>(WmoTemplateTable.Version.values());
       modes.setSelectedItem(WmoTemplateTable.standard);
       topPanel.add(modes, BorderLayout.CENTER);
       modes.addActionListener(new ActionListener() {
@@ -3473,7 +3529,7 @@ public class ToolsUI extends JPanel {
     GribCodePanel(PreferencesExt p) {
       super(p, "table:", false, false, false);
 
-      final JComboBox modes = new JComboBox(WmoCodeTable.Version.values());
+      final JComboBox<WmoCodeTable.Version> modes = new JComboBox<>(WmoCodeTable.Version.values());
       modes.setSelectedItem(WmoCodeTable.standard);
       topPanel.add(modes, BorderLayout.CENTER);
       modes.addActionListener(new ActionListener() {
@@ -3629,6 +3685,65 @@ public class ToolsUI extends JPanel {
 
   }
 
+    /////////////////////////////////////////////////////////////////////
+  private class GribRewritePanel extends OpPanel {
+    ucar.nc2.ui.GribRewritePanel ftTable;
+    final FileManager dirChooser;
+
+      GribRewritePanel(PreferencesExt prefs) {
+      super(prefs, "dir:", false, false);
+      dirChooser = new FileManager(parentFrame, null, null, (PreferencesExt) prefs.node("FeatureScanFileManager"));
+      ftTable = new ucar.nc2.ui.GribRewritePanel(prefs, buttPanel);
+      add(ftTable, BorderLayout.CENTER);
+
+      ftTable.addPropertyChangeListener(new java.beans.PropertyChangeListener() {
+        public void propertyChange(java.beans.PropertyChangeEvent e) {
+          if (e.getPropertyName().equals("openNetcdfFile")) {
+            String datasetName = (String) e.getNewValue();
+            openNetcdfFile(datasetName);
+          } else if (e.getPropertyName().equals("openGridDataset")) {
+            String datasetName = (String) e.getNewValue();
+            openGridDataset(datasetName);
+          } else if (e.getPropertyName().equals("openGrib1Data")) {
+            String datasetName = (String) e.getNewValue();
+            openGrib1Data(datasetName);
+          } else if (e.getPropertyName().equals("openGrib2Data")) {
+             String datasetName = (String) e.getNewValue();
+             openGrib2Data(datasetName);
+           }
+        }
+      });
+
+      dirChooser.getFileChooser().setFileSelectionMode(JFileChooser.FILES_AND_DIRECTORIES);
+      dirChooser.setCurrentDirectory(prefs.get("currDir", "."));
+      AbstractAction fileAction = new AbstractAction() {
+        public void actionPerformed(ActionEvent e) {
+          String filename = dirChooser.chooseFilename();
+          if (filename == null) return;
+          cb.setSelectedItem(filename);
+        }
+      };
+      BAMutil.setActionProperties(fileAction, "FileChooser", "open Local dataset...", false, 'L', -1);
+      BAMutil.addActionToContainer(buttPanel, fileAction);
+    }
+
+    boolean process(Object o) {
+      String command = (String) o;
+      return ftTable.setScanDirectory(command);
+    }
+
+    void closeOpenFiles() {
+      ftTable.clear();
+    }
+
+    void save() {
+      dirChooser.save();
+      ftTable.save();
+      prefs.put("currDir", dirChooser.getCurrentDirectory());
+      super.save();
+    }
+  }
+
   /////////////////////////////////////////////////////////////////////
   private class Hdf5ObjectPanel extends OpPanel {
     ucar.unidata.io.RandomAccessFile raf = null;
@@ -3651,9 +3766,9 @@ public class ToolsUI extends JPanel {
             hdf5Table.showInfo(f);
 
           } catch (IOException ioe) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-            ioe.printStackTrace(new PrintStream(bos));
-            detailTA.setText(bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            ioe.printStackTrace(new PrintWriter(sw));
+            detailTA.setText(sw.toString());
             detailWindow.show();
             return;
           }
@@ -3672,9 +3787,9 @@ public class ToolsUI extends JPanel {
             hdf5Table.showInfo2(f);
 
           } catch (IOException ioe) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-            ioe.printStackTrace(new PrintStream(bos));
-            detailTA.setText(bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            ioe.printStackTrace(new PrintWriter(sw));
+            detailTA.setText(sw.toString());
             detailWindow.show();
             return;
           }
@@ -3694,9 +3809,9 @@ public class ToolsUI extends JPanel {
             detailTA.setText(f.toString());
             detailWindow.show();
           } catch (IOException ioe) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-            ioe.printStackTrace(new PrintStream(bos));
-            detailTA.setText(bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            ioe.printStackTrace(new PrintWriter(sw));
+            detailTA.setText(sw.toString());
             detailWindow.show();
           }
         }
@@ -3709,7 +3824,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         if (raf != null)
           raf.close();
@@ -3722,8 +3836,9 @@ public class ToolsUI extends JPanel {
         err = true;
 
       } catch (Exception e) {
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -3760,9 +3875,9 @@ public class ToolsUI extends JPanel {
             hdf5Table.showInfo(f);
 
           } catch (IOException ioe) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-            ioe.printStackTrace(new PrintStream(bos));
-            detailTA.setText(bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            ioe.printStackTrace(new PrintWriter(sw));
+            detailTA.setText(sw.toString());
             detailWindow.show();
             return;
           }
@@ -3778,7 +3893,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         if (raf != null)
           raf.close();
@@ -3791,8 +3905,9 @@ public class ToolsUI extends JPanel {
         err = true;
 
       } catch (Exception e) {
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -3830,9 +3945,9 @@ public class ToolsUI extends JPanel {
             detailTA.setText(f.toString());
             detailWindow.show();
           } catch (IOException ioe) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-            ioe.printStackTrace(new PrintStream(bos));
-            detailTA.setText(bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            ioe.printStackTrace(new PrintWriter(sw));
+            detailTA.setText(sw.toString());
             detailWindow.show();
           }
         }
@@ -3844,7 +3959,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         if (raf != null)
           raf.close();
@@ -3857,8 +3971,9 @@ public class ToolsUI extends JPanel {
         err = true;
 
       } catch (Exception e) {
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -4097,9 +4212,9 @@ public class ToolsUI extends JPanel {
             panel.showInfo(f);
 
           } catch (Exception ioe) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-            ioe.printStackTrace(new PrintStream(bos));
-            detailTA.setText(bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            ioe.printStackTrace(new PrintWriter(sw));
+            detailTA.setText(sw.toString());
             detailWindow.show();
             return;
           }
@@ -4116,7 +4231,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         panel.setNcStream(command);
 
@@ -4125,8 +4239,9 @@ public class ToolsUI extends JPanel {
         err = true;
 
       } catch (Exception e) {
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -4161,9 +4276,9 @@ public class ToolsUI extends JPanel {
             panel.showInfo(f);
 
           } catch (Exception ioe) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-            ioe.printStackTrace(new PrintStream(bos));
-            detailTA.setText(bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            ioe.printStackTrace(new PrintWriter(sw));
+            detailTA.setText(sw.toString());
             detailWindow.show();
             return;
           }
@@ -4180,7 +4295,6 @@ public class ToolsUI extends JPanel {
       String command = (String) o;
       boolean err = false;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         panel.setNcStreamFile(command);
 
@@ -4189,8 +4303,9 @@ public class ToolsUI extends JPanel {
         err = true;
 
       } catch (Exception e) {
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -4581,9 +4696,9 @@ public class ToolsUI extends JPanel {
           try {
             table.showInfo(f);
           } catch (IOException e1) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(5000);
-            e1.printStackTrace(new PrintStream(bos));
-            f.format("%s", bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            e1.printStackTrace(new PrintWriter(sw));
+            f.format("%s", sw.toString());
           }
           detailTA.setText(f.toString());
           detailTA.gotoTop();
@@ -4607,9 +4722,9 @@ public class ToolsUI extends JPanel {
             table.showDataset();
 
           } catch (IOException e1) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(5000);
-            e1.printStackTrace(new PrintStream(bos));
-            detailTA.setText(bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            e1.printStackTrace(new PrintWriter(sw));
+            detailTA.setText(sw.toString());
             detailTA.gotoTop();
             detailWindow.show();
           }
@@ -4634,10 +4749,9 @@ public class ToolsUI extends JPanel {
         return true;
 
       } catch (Exception ioe) {
-        ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-        ioe.printStackTrace();
-        ioe.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        ioe.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailTA.gotoTop();
         detailWindow.show();
       }
@@ -4671,9 +4785,9 @@ public class ToolsUI extends JPanel {
           try {
             table.showInfo(f);
           } catch (IOException e1) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(5000);
-            e1.printStackTrace(new PrintStream(bos));
-            f.format("%s", bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            e1.printStackTrace(new PrintWriter(sw));
+            f.format("%s", sw.toString());
           }
           detailTA.setText(f.toString());
           detailTA.gotoTop();
@@ -4690,9 +4804,9 @@ public class ToolsUI extends JPanel {
 
           } catch (Exception e1) {
             Formatter f = new Formatter();
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(5000);
-            e1.printStackTrace(new PrintStream(bos));
-            f.format("%s", bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            e1.printStackTrace(new PrintWriter(sw));
+            f.format("%s", sw.toString());
             detailTA.setText(f.toString());
             detailTA.gotoTop();
             detailWindow.show();
@@ -4712,10 +4826,9 @@ public class ToolsUI extends JPanel {
         return true;
 
       } catch (Exception ioe) {
-        ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-        ioe.printStackTrace();
-        ioe.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        ioe.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailTA.gotoTop();
         detailWindow.show();
       }
@@ -4806,7 +4919,6 @@ public class ToolsUI extends JPanel {
       boolean err = false;
 
       NetcdfDataset newds;
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         newds = NetcdfDataset.openDataset(command, true, null);
         if (newds == null) {
@@ -4822,8 +4934,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Throwable ioe) {
         ioe.printStackTrace();
-        ioe.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        ioe.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -4843,6 +4956,7 @@ public class ToolsUI extends JPanel {
       try {
         if (ds != null) ds.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
 
       Formatter parseInfo = new Formatter();
@@ -4866,6 +4980,7 @@ public class ToolsUI extends JPanel {
       try {
         if (ds != null) ds.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
 
       this.ds = (NetcdfDataset) gds.getNetcdfFile(); // ??
@@ -4941,7 +5056,6 @@ public class ToolsUI extends JPanel {
       boolean err = false;
 
       NetcdfDataset newds;
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         newds = NetcdfDataset.openDataset(command, true, null);
         if (newds == null) {
@@ -4957,8 +5071,9 @@ public class ToolsUI extends JPanel {
 
       } catch (Throwable ioe) {
         ioe.printStackTrace();
-        ioe.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        ioe.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -4976,6 +5091,7 @@ public class ToolsUI extends JPanel {
       try {
         if (ds != null) ds.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
 
       Formatter parseInfo = new Formatter();
@@ -4999,6 +5115,7 @@ public class ToolsUI extends JPanel {
       try {
         if (ds != null) ds.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
 
       try {
@@ -5051,7 +5168,6 @@ public class ToolsUI extends JPanel {
       boolean err = false;
 
       NetcdfDataset newds;
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         newds = NetcdfDataset.openDataset(command, true, null);
         if (newds == null) {
@@ -5074,8 +5190,9 @@ public class ToolsUI extends JPanel {
         err = true;
 
       } catch (IOException ioe) {
-        ioe.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        ioe.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -5088,6 +5205,7 @@ public class ToolsUI extends JPanel {
       try {
         if (ds != null) ds.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
 
       this.ds = newds;
@@ -5154,11 +5272,12 @@ public class ToolsUI extends JPanel {
     boolean process(Object o) {
       String location = (String) o;
       boolean err = false;
-      NetcdfFile ncnew = null;
+      NetcdfFile ncnew;
 
       try {
         if (ncfile != null) ncfile.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
 
       try {
@@ -5174,9 +5293,9 @@ public class ToolsUI extends JPanel {
           setDataset(ncnew);
 
       } catch (Exception ioe) {
-        ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-        ioe.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        ioe.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -5195,6 +5314,7 @@ public class ToolsUI extends JPanel {
         if (ncfile != null) ncfile.close();
         ncfile = null;
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
       ncfile = nc;
 
@@ -5239,6 +5359,7 @@ public class ToolsUI extends JPanel {
       try {
         if (ncfile != null) ncfile.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
 
       try {
@@ -5247,9 +5368,9 @@ public class ToolsUI extends JPanel {
           setDataset(ncnew);
 
       } catch (Exception ioe) {
-        ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-        ioe.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        ioe.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         err = true;
       }
@@ -5267,6 +5388,7 @@ public class ToolsUI extends JPanel {
         if (ncfile != null) ncfile.close();
         ncfile = null;
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
       ncfile = nc;
 
@@ -5339,6 +5461,7 @@ public class ToolsUI extends JPanel {
     }
 
     void closeOpenFiles() {
+      ftTable.clear();
     }
 
     void save() {
@@ -5347,8 +5470,9 @@ public class ToolsUI extends JPanel {
       prefs.put("currDir", dirChooser.getCurrentDirectory());
       super.save();
     }
-
   }
+
+  //////////////////////////////////////////////////////////////////////////////////////
 
   private class CollectionSpecPanel extends OpPanel {
     CollectionSpecTable table;
@@ -5365,9 +5489,9 @@ public class ToolsUI extends JPanel {
           try {
             table.showCollection(f);
           } catch (Exception e1) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(5000);
-            e1.printStackTrace(new PrintStream(bos));
-            f.format("%s", bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            e1.printStackTrace(new PrintWriter(sw));
+            f.format("%s", sw.toString());
           }
           detailTA.setText(f.toString());
           detailTA.gotoTop();
@@ -5387,10 +5511,9 @@ public class ToolsUI extends JPanel {
         return true;
 
       } catch (Exception ioe) {
-        ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-        ioe.printStackTrace();
-        ioe.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        ioe.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailTA.gotoTop();
         detailWindow.show();
       }
@@ -5434,10 +5557,10 @@ public class ToolsUI extends JPanel {
         return true;
 
       } catch (Exception ioe) {
-        ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
         ioe.printStackTrace();
-        ioe.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        ioe.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailTA.gotoTop();
         detailWindow.show();
       }
@@ -5461,14 +5584,14 @@ public class ToolsUI extends JPanel {
     PointFeatureDatasetViewer pfViewer;
     JSplitPane split;
     FeatureDatasetPoint pfDataset = null;
-    JComboBox types;
+    JComboBox<FeatureType> types;
 
     PointFeaturePanel(PreferencesExt dbPrefs) {
       super(dbPrefs, "dataset:", true, false);
       pfViewer = new PointFeatureDatasetViewer(dbPrefs, buttPanel);
       add(pfViewer, BorderLayout.CENTER);
 
-      types = new JComboBox();
+      types = new JComboBox<>();
       for (FeatureType ft : FeatureType.values())
         types.addItem(ft);
       types.getModel().setSelectedItem(FeatureType.ANY_POINT);
@@ -5525,9 +5648,9 @@ public class ToolsUI extends JPanel {
             detailTA.setText(f.toString());
 
           } catch (IOException ioe) {
-            ByteArrayOutputStream bos = new ByteArrayOutputStream(5000);
-            ioe.printStackTrace(new PrintStream(bos));
-            detailTA.setText(bos.toString());
+            StringWriter sw = new StringWriter(5000);
+            ioe.printStackTrace(new PrintWriter(sw));
+            detailTA.setText(sw.toString());
           }
 
           detailTA.gotoTop();
@@ -5559,11 +5682,11 @@ public class ToolsUI extends JPanel {
       try {
         if (pfDataset != null) pfDataset.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
       detailTA.clear();
 
       Formatter log = new Formatter();
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         FeatureDataset featureDataset = FeatureDatasetFactoryManager.open(type, location, null, log);
         if (featureDataset == null) {
@@ -5586,10 +5709,10 @@ public class ToolsUI extends JPanel {
         return false;
 
       } catch (Throwable e) {
-        e.printStackTrace();
-        e.printStackTrace(new PrintStream(bos));
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
         detailTA.setText(log.toString());
-        detailTA.appendLine(bos.toString());
+        detailTA.setText(sw.toString());
         detailWindow.show();
 
         JOptionPane.showMessageDialog(this, e.getMessage());
@@ -5602,11 +5725,10 @@ public class ToolsUI extends JPanel {
       try {
         if (pfDataset != null) pfDataset.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
       detailTA.clear();
 
-      Formatter log = new Formatter();
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         pfDataset = pfd;
         pfViewer.setDataset(pfDataset);
@@ -5614,9 +5736,9 @@ public class ToolsUI extends JPanel {
         return true;
 
       } catch (Throwable e) {
-        e.printStackTrace(new PrintStream(bos));
-        detailTA.setText(log.toString());
-        detailTA.appendLine(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
 
         JOptionPane.showMessageDialog(this, e.getMessage());
@@ -5633,7 +5755,7 @@ public class ToolsUI extends JPanel {
   private class WmsPanel extends OpPanel {
     WmsViewer wmsViewer;
     JSplitPane split;
-    JComboBox types;
+    JComboBox<String> types;
 
     WmsPanel(PreferencesExt dbPrefs) {
       super(dbPrefs, "dataset:", true, false);
@@ -5641,7 +5763,7 @@ public class ToolsUI extends JPanel {
       add(wmsViewer, BorderLayout.CENTER);
 
       buttPanel.add(new JLabel("version:"));
-      types = new JComboBox();
+      types = new JComboBox<>();
       types.addItem("1.3.0");
       types.addItem("1.1.1");
       types.addItem("1.0.0");
@@ -5708,8 +5830,8 @@ public class ToolsUI extends JPanel {
     }
 
     void save() {
-      //super.save();
-      //radialViewer.save();
+      super.save();
+      radialViewer.save();
     }
 
     boolean setStationRadialDataset(String location) {
@@ -5718,10 +5840,10 @@ public class ToolsUI extends JPanel {
       try {
         if (radarCollectionDataset != null) radarCollectionDataset.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
 
-      StringBuilder log = new StringBuilder();
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
+      //StringBuilder log = new StringBuilder();
       try {
         ThreddsDataFactory.Result result = threddsDataFactory.openFeatureDataset(FeatureType.STATION_RADIAL, location, null);
         if (result.fatalError) {
@@ -5733,9 +5855,10 @@ public class ToolsUI extends JPanel {
         return true;
 
       } catch (Exception e) {
-        e.printStackTrace(new PrintStream(bos));
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
         detailTA.setText(log.toString());
-        detailTA.appendLine(bos.toString());
+        detailTA.appendLine(sw.toString());
         detailWindow.show();
 
         JOptionPane.showMessageDialog(this, e.getMessage());
@@ -5749,6 +5872,7 @@ public class ToolsUI extends JPanel {
       try {
         if (radarCollectionDataset != null) radarCollectionDataset.close();
       } catch (IOException ioe) {
+        System.out.printf("close failed %n");
       }
 
       radarCollectionDataset = dataset;
@@ -5855,15 +5979,15 @@ public class ToolsUI extends JPanel {
     boolean process(Object o) {
       String command = (String) o;
 
-      ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
       try {
         if (null != command)
           imagePanel.setImageFromUrl(command);
 
       } catch (Exception ioe) {
         ioe.printStackTrace();
-        ioe.printStackTrace(new PrintStream(bos));
-        detailTA.setText(bos.toString());
+        StringWriter sw = new StringWriter(5000);
+        ioe.printStackTrace(new PrintWriter(sw));
+        detailTA.setText(sw.toString());
         detailWindow.show();
         return false;
       }
@@ -5933,6 +6057,7 @@ public class ToolsUI extends JPanel {
         try {
           if (gridDs != null) gridDs.close();
         } catch (IOException ioe) {
+          System.out.printf("close failed %n");
         }
       }
       return true;
@@ -5952,6 +6077,7 @@ public class ToolsUI extends JPanel {
         try {
           if (geotiff != null) geotiff.close();
         } catch (IOException ioe) {
+          System.out.printf("close failed %n");
         }
       }
     }
@@ -5989,9 +6115,9 @@ public class ToolsUI extends JPanel {
         return;
 
       } catch (Exception e) {
-        ByteArrayOutputStream bos = new ByteArrayOutputStream(10000);
-        e.printStackTrace(new PrintStream(bos));
-        errMsg = bos.toString();
+        StringWriter sw = new StringWriter(5000);
+        e.printStackTrace(new PrintWriter(sw));
+        errMsg = sw.toString();
         ex = e;
         success = false;
         done = true;
@@ -6041,10 +6167,10 @@ public class ToolsUI extends JPanel {
         return super.toString();
       // System.out.println("proxy= "+proxy+" method = "+method+" args="+args);
       if (method.getName().equals("isSet")) {
-        return new Boolean(ucar.util.prefs.ui.Debug.isSet((String) args[0]));
+        return Debug.isSet((String) args[0]);
       }
       if (method.getName().equals("set")) {
-        ucar.util.prefs.ui.Debug.set((String) args[0], ((Boolean) args[1]).booleanValue());
+        ucar.util.prefs.ui.Debug.set((String) args[0], (Boolean) args[1]);
         return null;
       }
       return Boolean.FALSE;
@@ -6142,22 +6268,23 @@ public class ToolsUI extends JPanel {
   private static class MySplashScreen extends javax.swing.JWindow {
     public MySplashScreen() {
       Image image = Resource.getImage("/resources/nj22/ui/pix/ring2.jpg");
-      ImageIcon icon = new ImageIcon(image);
-      JLabel lab = new JLabel(icon);
-      getContentPane().add(lab);
-      pack();
-
-      //show();
-      java.awt.Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
-      int width = image.getWidth(null);
-      int height = image.getHeight(null);
-      setLocation(screenSize.width / 2 - (width / 2), screenSize.height / 2 - (height / 2));
-      addMouseListener(new MouseAdapter() {
-        public void mousePressed(MouseEvent e) {
-          setVisible(false);
-        }
-      });
-      setVisible(true);
+      if (image != null) {
+        ImageIcon icon = new ImageIcon(image);
+        JLabel lab = new JLabel(icon);
+        getContentPane().add(lab);
+        pack();
+        //show();
+        java.awt.Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
+        int width = image.getWidth(null);
+        int height = image.getHeight(null);
+        setLocation(screenSize.width / 2 - (width / 2), screenSize.height / 2 - (height / 2));
+        addMouseListener(new MouseAdapter() {
+            public void mousePressed(MouseEvent e) {
+                setVisible(false);
+            }
+        });
+        setVisible(true);
+      }
     }
   }
 
@@ -6178,7 +6305,6 @@ public class ToolsUI extends JPanel {
     if (cache != null)
       cache.clearCache(true);
     FileCache.shutdown(); // shutdown threads
-    if (cacheManager != null) cacheManager.close(); // shutdown ehcache
     MetadataManager.closeAll(); // shutdown bdb
 
     System.exit(0);
@@ -6190,7 +6316,6 @@ public class ToolsUI extends JPanel {
   private static PreferencesExt prefs;
   private static XMLStore store;
   private static boolean done = false;
-  private static MController cacheManager;
 
   private static String wantDataset = null;
 
@@ -6216,7 +6341,6 @@ public class ToolsUI extends JPanel {
   }
 
   static boolean isCacheInit = false;
-  static boolean isDiskCacheInit = false;
 
   public static void main(String args[]) {
     try {
@@ -6237,8 +6361,7 @@ public class ToolsUI extends JPanel {
 
     if (debugListen) {
       System.out.println("Arguments:");
-      for (int i = 0; i < args.length; i++) {
-        String arg = args[i];
+      for (String arg : args) {
         System.out.println(" " + arg);
       }
 
@@ -6251,8 +6374,8 @@ public class ToolsUI extends JPanel {
     if (args.length > 0) {
       // munge arguments into a single string
       StringBuilder sbuff = new StringBuilder();
-      for (int i = 0; i < args.length; i++) {
-        sbuff.append(args[i]);
+      for (String arg : args) {
+        sbuff.append(arg);
         sbuff.append(" ");
       }
       String arguments = sbuff.toString();
@@ -6276,7 +6399,6 @@ public class ToolsUI extends JPanel {
       sm = new SocketMessage(14444, null);
       if (sm.isAlreadyRunning()) {
         System.out.println("ToolsUI already running - start up another copy");
-        sm = null;
       } else {
         sm.addEventListener(new SocketMessage.EventListener() {
           public void setMessage(SocketMessage.Event event) {
@@ -6290,8 +6412,7 @@ public class ToolsUI extends JPanel {
 
     if (debugListen) {
       System.out.println("Arguments:");
-      for (int i = 0; i < args.length; i++) {
-        String arg = args[i];
+      for (String arg : args) {
         System.out.println(" " + arg);
       }
 
